--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <tbody>
 
         <tr>
-            <td>Sumit</td>
+            <td>MOhmit</td>
             <td>38</td>
             <td>mcca</td>
             
